--- a/views/button.html
+++ b/views/button.html
@@ -5,15 +5,13 @@
 			<colgroup>
 			  <col width="150">
 			  <col width="220">
-			  <col width="220">
-			  <col width="300">
+			  <col width="400">
 			</colgroup>
 			<thead>
 				<tr>
 					<th>按钮</th>
 					<th>类名</th>
 					<th>代码</th>
-					<th>描述</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -21,37 +19,31 @@
 					<td><a href="javascript: ;" class="ui-btn-raw">原始按钮</a></td>
 					<td>ui-btn-raw</td>
 					<td><textarea readonly>&lt;a href="#" class="ui-btn-raw"&gt;按钮&lt;/a&gt;</textarea></td>
-					<td>原始按钮</td>
 				</tr>
 				<tr>
 					<td><a href="javascript: ;" class="ui-btn-disabled">禁用按钮</a></td>
 					<td>ui-btn-disabled</td>
 					<td><textarea readonly>&lt;a href="#" class="ui-btn-disabled"&gt;按钮&lt;/a&gt;</textarea></td>
-					<td>禁用按钮，常用于返回</td>
 				</tr>
 				<tr>
-					<td><a href="javascript: ;" class="ui-btn-defalut">默认按钮</a></td>
-					<td>ui-btn-defalut</td>
-					<td><textarea readonly>&lt;a href="#" class="ui-btn-defalut"&gt;按钮&lt;/a&gt;</textarea></td>
-					<td>默认按钮</td>
+					<td><a href="javascript: ;" class="ui-btn-default">默认按钮</a></td>
+					<td>ui-btn-default</td>
+					<td><textarea readonly>&lt;a href="#" class="ui-btn-default"&gt;按钮&lt;/a&gt;</textarea></td>
 				</tr>
 				<tr>
 					<td><a href="javascript: ;" class="ui-btn-normal">百搭按钮</a></td>
 					<td>ui-btn-normal</td>
 					<td><textarea readonly>&lt;a href="#" class="ui-btn-normal"&gt;按钮&lt;/a&gt;</textarea></td>
-					<td>百搭按钮</td>
 				</tr>
 				<tr>
 					<td><a href="javascript: ;" class="ui-btn-warm">暖色按钮</a></td>
 					<td>ui-btn-warm</td>
 					<td><textarea readonly>&lt;a href="#" class="ui-btn-warm"&gt;按钮&lt;/a&gt;</textarea></td>
-					<td>暖色按钮</td>
 				</tr>
 				<tr>
 					<td><a href="javascript: ;" class="ui-btn-danger">警告按钮</a></td>
 					<td>ui-btn-danger</td>
 					<td><textarea readonly>&lt;a href="#" class="ui-btn-danger"&gt;按钮&lt;/a&gt;</textarea></td>
-					<td>警告按钮</td>
 				</tr>
 			</tbody>
 		</table>
@@ -131,9 +123,9 @@
 					</thead>
 					<tbody>
 						<tr>
-							<td><a href="javascript: ;" class="ui-btn-defalut ui-large">大号按钮</a></td>
-							<td>ui-btn-defalut ui-large</td>
-							<td><textarea readonly>&lt;a href="#" class="ui-btn-defalut ui-large"&gt;按钮&lt;/a&gt;</textarea></td>
+							<td><a href="javascript: ;" class="ui-btn-default ui-large">大号按钮</a></td>
+							<td>ui-btn-default ui-large</td>
+							<td><textarea readonly>&lt;a href="#" class="ui-btn-default ui-large"&gt;按钮&lt;/a&gt;</textarea></td>
 						</tr>
 						<tr>
 							<td><a href="javascript: ;" class="ui-btn-normal">默认大小</a></td>
@@ -174,9 +166,9 @@
 			</thead>
 			<tbody>
 				<tr>
-					<td><a href="javascript: ;" class="ui-btn-defalut ui-radius">radius</a></td>
-					<td>ui-btn-defalut ui-radius</td>
-					<td><textarea readonly>&lt;a href="#" class="ui-btn-defalut ui-radius"&gt;按钮&lt;/a&gt;</textarea></td>
+					<td><a href="javascript: ;" class="ui-btn-default ui-radius">radius</a></td>
+					<td>ui-btn-default ui-radius</td>
+					<td><textarea readonly>&lt;a href="#" class="ui-btn-default ui-radius"&gt;按钮&lt;/a&gt;</textarea></td>
 					<td>半圆样式</td>
 				</tr>
 				<tr>
@@ -219,10 +211,10 @@
 			</thead>
 			<tbody>
 				<tr>
-					<td><a href="javascript: ;" class="ui-btn-defalut"><i>&#xe600;</i>按钮</a></td>
-					<td>ui-btn-defalut</td>
+					<td><a href="javascript: ;" class="ui-btn-default"><i>&#xe600;</i>按钮</a></td>
+					<td>ui-btn-default</td>
 					<td>
-						<textarea readonly>&lt;a href="#" class="ui-btn-defalut"&gt;&lt;i&gt;&lt;/i&gt;按钮&lt;/a&gt;</textarea>
+						<textarea readonly>&lt;a href="#" class="ui-btn-default"&gt;&lt;i&gt;&lt;/i&gt;按钮&lt;/a&gt;</textarea>
 					</td>
 					<td>i标签内是icon-font字体</td>
 				</tr>
@@ -280,25 +272,25 @@
 				</tr>
 				<tr>
 					<td>
-						<a href="javascript: ;" class="ui-btn-defalut ui-font"><i>&#xe600;</i></a>
+						<a href="javascript: ;" class="ui-btn-default ui-font"><i>&#xe600;</i></a>
 						<a href="javascript: ;" class="ui-btn-deepred ui-font"><i>&#xe67e;</i></a>
 						<a href="javascript: ;" class="ui-btn-info ui-font"><i>&#xe62f;</i></a>
 					</td>
-					<td>ui-btn-defalut ui-font</td>
+					<td>ui-btn-default ui-font</td>
 					<td>
-						<textarea readonly>&lt;a href="#" class="ui-btn-defalut ui-font"&gt;&lt;i&gt;&lt;/i&gt;按钮&lt;/a&gt;</textarea>
+						<textarea readonly>&lt;a href="#" class="ui-btn-default ui-font"&gt;&lt;i&gt;&lt;/i&gt;按钮&lt;/a&gt;</textarea>
 					</td>
 					<td></td>
 				</tr>
 				<tr>
 					<td>
-						<a href="javascript: ;" class="ui-btn-defalut ui-font ui-small"><i>&#xe600;</i></a>
+						<a href="javascript: ;" class="ui-btn-default ui-font ui-small"><i>&#xe600;</i></a>
 						<a href="javascript: ;" class="ui-btn-deepred ui-font ui-small"><i>&#xe67e;</i></a>
 						<a href="javascript: ;" class="ui-btn-info ui-font ui-small"><i>&#xe62f;</i></a>
 					</td>
-					<td>ui-btn-defalut ui-font ui-small</td>
+					<td>ui-btn-default ui-font ui-small</td>
 					<td>
-						<textarea readonly>&lt;a href="#" class="ui-btn-defalut ui-font ui-small"&gt;&lt;i&gt;&lt;/i&gt;按钮&lt;/a&gt;</textarea>
+						<textarea readonly>&lt;a href="#" class="ui-btn-default ui-font ui-small"&gt;&lt;i&gt;&lt;/i&gt;按钮&lt;/a&gt;</textarea>
 					</td>
 					<td></td>
 				</tr>
