--- a/views/home.html
+++ b/views/home.html
@@ -19,21 +19,22 @@
 				<a href="javascript: void(0);" ui-sref="home.form"><i class="ui-icon ui-icon-show">&#xe66b;</i><span>表单</span></a>
 				<a href="javascript: void(0);" ui-sref="home.tabs"><i class="ui-icon ui-icon-show">&#xe627;</i><span>选项卡</span></a>
 				<a href="javascript: void(0);" ui-sref="home.iconfont"><i class="ui-icon ui-icon-show">&#xe629;</i><span>字体</span></a>
-				<a href="javascript: void(0);" ui-sref="home.loading"><i class="ui-icon ui-icon-show">&#xe626;</i><span>loading</span></a>
+				<!-- <a href="javascript: void(0);" ui-sref="home.loading"><i class="ui-icon ui-icon-show">&#xe626;</i><span>loading</span></a> -->
 				<a href="javascript: void(0);" ui-sref="home.title"><i class="ui-icon ui-icon-show">&#xe616;</i><span>标题与引用</span></a>
 			</div>
 		</li>
 		<li>
 			<a href="javascript: void(0);" class="ui-items-title">
 				<i class="ui-icon">&#xe667;</i>
-				<span>列表标题</span>
+				<span>插件集</span>
 			</a>
 			<div class="ui-items-call">
-				<a href="javascript: void(0);"><i class="ui-icon ui-icon-show">&#xe62d;</i><span>值01</span></a>
-				<a href="javascript: void(0);"><i class="ui-icon ui-icon-show">&#xed71;</i><span>值02</span></a>
-				<a href="javascript: void(0);"><i class="ui-icon ui-icon-show">&#xe61f;</i><span>值03</span></a>
-				<a href="javascript: void(0);"><i class="ui-icon ui-icon-show">&#xe744;</i><span>值04</span></a>
-				<a href="javascript: void(0);"><i class="ui-icon ui-icon-show">&#xe66a;</i><span>值05</span></a>
+				<a href="javascript: void(0);"><i class="ui-icon ui-icon-show">&#xe62d;</i><span>图片上传</span></a>
+				<a href="javascript: void(0);"><i class="ui-icon ui-icon-show">&#xed71;</i><span>分页</span></a>
+				<a href="javascript: void(0);"><i class="ui-icon ui-icon-show">&#xe61f;</i><span>进度条</span></a>
+				<a href="javascript: void(0);"><i class="ui-icon ui-icon-show">&#xe744;</i><span>弹出层</span></a>
+				<a href="javascript: void(0);"><i class="ui-icon ui-icon-show">&#xe66a;</i><span>时间选择器</span></a>
+				<a href="javascript: void(0);"><i class="ui-icon ui-icon-show">&#xe66a;</i><span>地图</span></a>
 			</div>
 		</li>
 	</ul>
