--- a/views/tables.html
+++ b/views/tables.html
@@ -9,7 +9,7 @@
 			</ul>
 		</div>
 		<div class="ui-tabs-body">
-			<div class="active ui-padding-row-15">
+			<div class="active" style="padding: 15px;">
 				<div id="textHTML"><div class="ui-table-box">
 	<table class="ui-table" id="table">
 		<colgroup>
