--- a/sass/ui/module/layout.scss
+++ b/sass/ui/module/layout.scss
@@ -95,40 +95,40 @@
 
 
 .ui-ps-rf-12{
-  left: 100%;
+  right: 100%;
 }
 .ui-ps-rf-11{
-  left: 91.66666667%;
+  right: 91.66666667%;
 }
 .ui-ps-rf-10{
-  left: 83.33333333%;
+  right: 83.33333333%;
 }
 .ui-ps-rf-9{
-  left: 75%;
+  right: 75%;
 }
 .ui-ps-rf-8{
-  left: 66.66666667%;
+  right: 66.66666667%;
 }
 .ui-ps-rf-7{
-  left: 58.33333333%;
+  right: 58.33333333%;
 }
 .ui-ps-rf-6{
-  left: 50%;
+  right: 50%;
 }
 .ui-ps-rf-5{
-  left: 41.66666667%;
+  right: 41.66666667%;
 }
 .ui-ps-rf-4{
-  left: 33.33333333%;
+  right: 33.33333333%;
 }
 .ui-ps-rf-3{
-  left: 25%;
+  right: 25%;
 }
 .ui-ps-rf-2{
-  left: 16.66666667%;
+  right: 16.66666667%;
 }
 .ui-ps-rf-1{
-  left: 8.33333333%;
+  right: 8.33333333%;
 }
 
 
@@ -210,7 +210,122 @@
 }
 
 
+.ui-pd-5{
+  padding: 5px;
+}
+.ui-pd-10{
+  padding: 10px;
+}
+.ui-pd-12{
+  padding: 12px;
+}
+.ui-pd-15{
+  padding: 15px;
+}
+.ui-pd-20{
+  padding: 20px;
+}
 
+.ui-pd-col-5{
+  padding-left:5px;
+  padding-right:5px;
+}
+.ui-pd-col-10{
+  padding-left:10px;
+  padding-right:10px;
+}
+.ui-pd-col-12{
+  padding-left:12px;
+  padding-right:12px;
+}
+.ui-pd-col-15{
+  padding-left:15px;
+  padding-right:15px;
+}
+.ui-pd-col-20{
+  padding-left:20px;
+  padding-right:20px;
+}
+
+.ui-pd-row-5{
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+.ui-pd-row-10{
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.ui-pd-row-12{
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+.ui-pd-row-15{
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+.ui-pd-row-20{
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+/* margin */
+.ui-mg-5{
+  margin: 5px;
+}
+.ui-mg-10{
+  margin: 10px;
+}
+.ui-mg-12{
+  margin: 12px;
+}
+.ui-mg-15{
+  margin: 15px;
+}
+.ui-mg-20{
+  margin: 20px;
+}
+
+.ui-mg-col-5{
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.ui-mg-col-10{
+  margin-left: 10px;
+  margin-right: 10px;
+}
+.ui-mg-col-12{
+  margin-left: 12px;
+  margin-right: 12px;
+}
+.ui-mg-col-15{
+  margin-left: 15px;
+  margin-right: 15px;
+}
+.ui-mg-col-20{
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.ui-mg-row-5{
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+.ui-mg-row-10{
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.ui-mg-row-12{
+  margin-top: 12px;
+  margin-bottom: 12px;
+}
+.ui-mg-row-15{
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+.ui-mg-row-20{
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
 
 
 
