--- a/sass/ui/module/reset.scss
+++ b/sass/ui/module/reset.scss
@@ -7,7 +7,7 @@ h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal}
 q:before,q:after{content:''}
 abbr,acronym{border:0;font-variant:normal}
 sup{vertical-align:text-top}
-a{text-decoration:none;color:inherit;}
+a{text-decoration:none;color:inherit;&:focus{outline:none;}}
 sub{vertical-align:text-bottom;}
 body{font:14px/1.5 \5FAE\8F6F\96C5\9ED1,sans-serif; color: #333;}
 .clear:after{content:"\0020";height:0;display:block;clear:both;}
