--- a/views/components/form.html
+++ b/views/components/form.html
@@ -398,6 +398,10 @@
 					<input type="checkbox" id="s21">
 					<label for="s21" class="ui-switch"></label>
 				</div>
+				<div class="ui-switch-box">
+					<input type="checkbox" id="ss" disabled>
+					<label for="ss" class="ui-switch" data-switch-true="开启" data-switch-false="禁用"></label>
+				</div>
 			</div>
 		</div>
 	</div>
