--- a/sass/ui/module/form.scss
+++ b/sass/ui/module/form.scss
@@ -36,6 +36,14 @@ input[type="radio"]{
 		.ui-input-icon{
 			line-height: 40px;
 		}
+		.ui-select{
+			font-size: 15px;
+			height: 40px;
+			& + i.ui-icon{
+				height: 38px;
+				line-height: 40px;
+			}
+		}
 	}
 	.ui-small{
 		font-size: 13px;
@@ -51,6 +59,14 @@ input[type="radio"]{
 		}
 		.ui-input-icon{
 			line-height: 30px;
+		}
+		.ui-select{
+			font-size: 13px;
+			height: 30px;
+			& + i.ui-icon{
+				height: 28px;
+				line-height: 30px;
+			}
 		}
 	}
 	.ui-label{
@@ -108,6 +124,7 @@ input[type="radio"]{
 		text-align: center;
 		position: absolute;
 		top: 0;
+		pointer-events: none;
 		& + .ui-input{
 			padding-left: 30px;
 		}
@@ -204,29 +221,6 @@ input[type="radio"]{
 			pointer-events: none;
 		}
 	}
-	.ui-large{
-		font-size: 15px;
-		.ui-select{
-			font-size: 15px;
-			height: 40px;
-			& + i.ui-icon{
-				height: 38px;
-				line-height: 40px;
-			}
-		}
-	}
-	.ui-small{
-		font-size: 13px;
-		.ui-select{
-			font-size: 13px;
-			height: 30px;
-			& + i.ui-icon{
-				height: 28px;
-				line-height: 30px;
-			}
-		}
-	}
-
 	.ui-checkbox-box{
 		display: inline-block;
 		line-height: 35px;
@@ -555,6 +549,17 @@ input[type="radio"]{
 				color: #fff;
 			}
 		}
+		& > input[type="checkbox"]:disabled + .ui-switch{
+			background-color: #e0e0e0 !important;
+			border-color: #ddd !important;
+			cursor: not-allowed;
+			&:before{
+				background-color: #fff;
+			}
+			&:after{
+				color: #fff;
+			}
+		}
 	}
 	.ui-switch{
 		display: inline-block;
@@ -591,6 +596,52 @@ input[type="radio"]{
 			line-height: 22px;
 		}
 	}
-	
 
+	.ui-input,
+	.ui-select{
+		&.ui-small{
+			width: 120px !important;
+		}
+	}
+	.ui-linkage{
+		font-size: 13px;
+		border-radius: 2px;
+		border: solid 1px #ccc;
+		.ui-input,
+		.ui-select{
+			height: 33px;
+			border-radius: 0;
+			border: 0;
+			&.ui-small{
+				width: 120px !important;
+			}
+		}
+		>*{
+			float: left;
+			height: 33px;
+			line-height: 33px;
+			position: relative;
+			border-right: solid 1px #ccc !important;
+		}
+		>*:last-child{
+			border-right: none !important;
+		}
+	}
+	.ui-input-icon[position="right"],
+	.ui-select + i.ui-icon{
+	  right: 0;
+	  top: 0;
+	}
+}
+.ui-query{
+	@include transition(height .25s);
+	position: relative;
+	.ui-label{
+		display: block;
+		width: 110px;
+		float: left;
+		padding-right: 12px;
+		line-height: 35px;
+		text-align: right;
+	}
 }
