--- a/sass/ui/module/layout.scss
+++ b/sass/ui/module/layout.scss
@@ -341,3 +341,14 @@
     clear:both;
   }
 }
+.ui-items-inline{
+  @extend .ui-items;
+  float: left;
+}
+.ui-input-inline{
+  float: left;
+  input,
+  select{
+    width: 190px !important;
+  }
+}
