--- a/views/home.html
+++ b/views/home.html
@@ -16,12 +16,12 @@
 				<span>常用场景</span>
 			</a>
 			<div class="ui-items-call">
-				<a href="javascript: void(0);" ui-sref="home.button" ng-class="{active: $root.state == 'button'}"><i>&#xe622;</i><span>按钮</span></a>
-				<a href="javascript: void(0);" ui-sref="home.tables" ng-class="{active: $root.state == 'tables'}"><i>&#xe612;</i><span>表格</span></a>
-				<a href="javascript: void(0);" ui-sref="home.form" ng-class="{active: $root.state == 'form'}"><i>&#xe66b;</i><span>表单</span></a>
-				<a href="javascript: void(0);" ui-sref="home.tabs" ng-class="{active: $root.state == 'tabs'}"><i>&#xe627;</i><span>选项卡</span></a>
-				<a href="javascript: void(0);" ui-sref="home.iconfont" ng-class="{active: $root.state == 'iconfont'}"><i>&#xe629;</i><span>字体</span></a>
-				<a href="javascript: void(0);" ui-sref="home.title" ng-class="{active: $root.state == 'title'}"><i>&#xe616;</i><span>标题与引用</span></a>
+				<a href="javascript: void(0);" ui-sref="home.comp.button" ng-class="{active: $root.state == 'button'}"><i>&#xe622;</i><span>按钮</span></a>
+				<a href="javascript: void(0);" ui-sref="home.comp.tables" ng-class="{active: $root.state == 'tables'}"><i>&#xe612;</i><span>表格</span></a>
+				<a href="javascript: void(0);" ui-sref="home.comp.form" ng-class="{active: $root.state == 'form'}"><i>&#xe66b;</i><span>表单</span></a>
+				<a href="javascript: void(0);" ui-sref="home.comp.tabs" ng-class="{active: $root.state == 'tabs'}"><i>&#xe627;</i><span>选项卡</span></a>
+				<a href="javascript: void(0);" ui-sref="home.comp.iconfont" ng-class="{active: $root.state == 'iconfont'}"><i>&#xe629;</i><span>字体</span></a>
+				<a href="javascript: void(0);" ui-sref="home.comp.title" ng-class="{active: $root.state == 'title'}"><i>&#xe616;</i><span>标题与引用</span></a>
 			</div>
 		</li>
 		<li>
@@ -44,13 +44,13 @@
 				<span>场景demo</span>
 			</a>
 			<div class="ui-items-call">
-				<a href="javascript: void(0);" ui-sref="home.list"><i>&#xe62d;</i><span>列表页</span></a>
-				<a href="javascript: void(0);"><i>&#xed71;</i><span>详情页</span></a>
+				<a href="javascript: void(0);" ui-sref="home.demo.list" ng-class="{active: $root.state === 'list'}"><i>&#xe62d;</i><span>列表页</span></a>
+				<a href="javascript: void(0);" ui-sref="home.demo.details" ng-class="{active: $root.state === 'details'}"><i>&#xed71;</i><span>详情页</span></a>
 				<a href="javascript: void(0);"><i>&#xe61f;</i><span>进度条</span></a>
 				<a href="javascript: void(0);"><i>&#xe744;</i><span>弹出层</span></a>
 				<a href="javascript: void(0);"><i>&#xe66a;</i><span>时间选择器</span></a>
 				<a href="javascript: void(0);"><i>&#xe66a;</i><span>地图</span></a>
-				<a href="javascript: void(0);" ui-sref="home.test"><i>&#xe66a;</i><span>test</span></a>
+				<a href="javascript: void(0);" ui-sref="home.demo.test"><i>&#xe66a;</i><span>test</span></a>
 			</div>
 		</li>
 	</ul>
