--- a/sass/ui/module/frame.scss
+++ b/sass/ui/module/frame.scss
@@ -162,6 +162,7 @@ body,
 			i{
 				width: 20px;
 				height: 20px;
+				font-size: 16px;
 				line-height: 20px;
 				font-family: 'relaicon';
 				text-align: center;
