--- a/views/components/form.html
+++ b/views/components/form.html
@@ -56,15 +56,19 @@
 		<div class="ui-items">
 			<label for="" class="ui-wd-2 ui-label" align="right">输入框有提示符</label>
 			<div class="ui-wd-10">
-				<i class="ui-icon ui-input-icon">&#xe67e;</i>
-				<input type="text" class="ui-input" placeholder="ui-wd-8">
+				<div class="ui-relative">
+					<i class="ui-icon ui-input-icon">&#xe67e;</i>
+					<input type="text" class="ui-input" placeholder="ui-wd-8">
+				</div>
 			</div>
 		</div>
 		<div class="ui-items">
 			<label for="" class="ui-wd-2 ui-label" align="right">输入框有提示符</label>
 			<div class="ui-wd-10">
-				<i class="ui-icon ui-input-icon" position="right">&#xe67e;</i>
-				<input type="text" class="ui-input" placeholder="ui-wd-8">
+				<div class="ui-relative">
+					<i class="ui-icon ui-input-icon" position="right">&#xe67e;</i>
+					<input type="text" class="ui-input" placeholder="ui-wd-8">
+				</div>
 			</div>
 		</div>
 		<div class="ui-items">
@@ -100,42 +104,48 @@
 		<div class="ui-items ui-large">
 			<label for="" class="ui-wd-2 ui-label" align="right">select选择框-大号</label>
 			<div class="ui-wd-3">
-				<select name="" id="" class="ui-select">
-					<option value="0">北京</option>
-					<option value="1">上海</option>
-					<option value="2">广州</option>
-					<option value="3">深圳</option>
-					<option value="4">杭州</option>
-				</select>
-				<i class="ui-icon">&#xe65c;</i>
+				<div class="ui-relative">
+					<select name="" id="" class="ui-select">
+						<option value="0">北京</option>
+						<option value="1">上海</option>
+						<option value="2">广州</option>
+						<option value="3">深圳</option>
+						<option value="4">杭州</option>
+					</select>
+					<i class="ui-icon">&#xe65c;</i>
+				</div>
 			</div>
 			<div class="ui-wd-4 ui-form-tip">禁止输入特殊字符</div>
 		</div>
 		<div class="ui-items">
 			<label for="" class="ui-wd-2 ui-label" align="right">select选择框-默认</label>
 			<div class="ui-wd-3">
-				<select name="" id="" class="ui-select">
-					<option value="0">北京</option>
-					<option value="1">上海</option>
-					<option value="2">广州</option>
-					<option value="3">深圳</option>
-					<option value="4">杭州</option>
-				</select>
-				<i class="ui-icon">&#xe65c;</i>
+				<div class="ui-relative">
+					<select name="" id="" class="ui-select">
+						<option value="0">北京</option>
+						<option value="1">上海</option>
+						<option value="2">广州</option>
+						<option value="3">深圳</option>
+						<option value="4">杭州</option>
+					</select>
+					<i class="ui-icon">&#xe65c;</i>
+				</div>
 			</div>
 			<div class="ui-wd-4 ui-form-tip">禁止输入特殊字符</div>
 		</div>
 		<div class="ui-items ui-small">
 			<label for="" class="ui-wd-2 ui-label" align="right">select选择框-小号</label>
 			<div class="ui-wd-3">
-				<select name="" id="" class="ui-select">
-					<option value="0">北京</option>
-					<option value="1">上海</option>
-					<option value="2">广州</option>
-					<option value="3">深圳</option>
-					<option value="4">杭州</option>
-				</select>
-				<i class="ui-icon">&#xe65c;</i>
+				<div class="ui-relative">
+					<select name="" id="" class="ui-select">
+						<option value="0">北京</option>
+						<option value="1">上海</option>
+						<option value="2">广州</option>
+						<option value="3">深圳</option>
+						<option value="4">杭州</option>
+					</select>
+					<i class="ui-icon">&#xe65c;</i>
+				</div>
 			</div>
 			<div class="ui-wd-4 ui-form-tip">禁止输入特殊字符</div>
 		</div>
