--- a/sass/ui/module/form.scss
+++ b/sass/ui/module/form.scss
@@ -192,8 +192,10 @@ input[type="radio"]{
 
 	.ui-textarea{
 		width: 100%;
-		padding: 10px;
+		max-width: 100%;
 		min-height: 80px;
+		padding: 10px;
+		vertical-align: middle;
 		&:focus{
 			border-color: #999;
 		}
@@ -203,6 +205,7 @@ input[type="radio"]{
 		width: 100%;
 		height: 35px;
 		padding: 0 10px;
+		background: #fff;
 		&:focus{
 			border-color: #999;
 		}
@@ -215,6 +218,7 @@ input[type="radio"]{
 			line-height: 35px;
 			text-align: center;
 			background-color: #fff;
+			border-radius: 5px;
 			position: absolute;
 			top: 1px;
 			right: 16px;
@@ -288,7 +292,6 @@ input[type="radio"]{
 		@include transition(all .25s);
 		&:before{
 			display: inline-block;
-			margin-right: 5px;
 			content: '\e72e';
 			width: 18px;
 			height: 18px;
@@ -299,6 +302,9 @@ input[type="radio"]{
 			border-radius: 2px;
 			border: solid 1px #d2d2d2;
 			font-family: 'relaicon';
+		}
+		span{
+			margin-left: 5px;
 		}
 		&.ui-solid:before{
 			border: none;
