--- a/sass/ui/module/form.scss
+++ b/sass/ui/module/form.scss
@@ -205,7 +205,8 @@ input[type="radio"]{
 		width: 100%;
 		height: 35px;
 		padding: 0 10px;
-		background: #fff;
+		background: none;
+		-webkit-appearance: none;
 		&:focus{
 			border-color: #999;
 		}
