sass | add comments

--- a/sass/ui/module/form.scss
+++ b/sass/ui/module/form.scss
@@ -1,3 +1,7 @@
+/* 
+ *	name: 表单
+ *	author: phuhoang
+ */
 $checkDefaultColor: #5fb878;
 input,
 textarea,
@@ -296,6 +300,7 @@ input[type="radio"]{
 			content: '\e72e';
 			width: 18px;
 			height: 18px;
+			margin-right: 6px;
 			color: #fff;
 			font-weight: bold;
 			line-height: 17px;
