--- a/sass/ui/module/icon.scss
+++ b/sass/ui/module/icon.scss
@@ -1,3 +1,7 @@
+/* 
+ *  name: 字体图标
+ *  author: phuhoang
+ */
 @font-face {font-family: "relaicon";
   src: url('font/iconfont.eot'); /* IE9*/
   src: url('font/iconfont.eot') format('embedded-opentype'), /* IE6-IE8 */
