--- a/sass/ui/module/reset.scss
+++ b/sass/ui/module/reset.scss
@@ -1,3 +1,7 @@
+/* 
+ *	name: 浏览器统一样式
+ *	author: phuhoang
+ */
 body,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{margin:0;padding:0}
 table{border-collapse:collapse;border-spacing:0}
 address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:normal}
