--- a/views/home.html
+++ b/views/home.html
@@ -60,7 +60,7 @@
 
 
 <!-- container -->
-<div class="ui-container" ng-controller="viewBase">
+<div class="ui-container" ng-controller="appController">
 	<div class="ui-container-over">
 		<!-- view container -->
 		<div ui-view></div>
