--- a/sass/ui/module/login.scss
+++ b/sass/ui/module/login.scss
@@ -2,3 +2,20 @@
  *	name: 登录
  *	author: phuhoang
  */
+html,body{height: 100%;}
+.login{width: 360px; position: absolute; top: 30%; left: 50%; margin-left: -180px;}
+.login li{height: 50px; background: rgba(255,255,255,.1);list-style: none; margin-bottom: 15px; border-radius: 3px;}
+.login li label{display: block; padding: 12px; height: 50px;}
+.login h1{color: #fff; font-size: 20px; line-height: 20px; margin-bottom: 20px; text-align: center;}
+.login li input{width: 300px;height: 26px; color: #eee; background: none; border: none; padding-left: 10px;}
+.login li i{color: #eee; font-size: 26px; line-height: 26px; vertical-align: middle;}
+.login li:last-child{padding: 0; background: none;}
+.login li a{display: block; height: 50px; line-height: 50px; text-align: center; font-size: 18px; border-radius: 3px;transition: background .2s; -webkit-transition: background .2s;-moz-transition: background .2s;background: #0bd38a;color: #fff;}
+.login li a.active{ color: #ccc; background: #58666d;}
+.login li a:active{ background: #08af72;}
+.login li a.active:active{ background: #58666d;}
+.login > div{color: #f00;}
+::-webkit-input-placeholder {color: #ccc;}
+:-moz-placeholder {color: #ccc;}
+::-moz-placeholder{color: #ccc;}
+:-ms-input-placeholder {color: #ccc;}
