--- a/views/components/title.html
+++ b/views/components/title.html
@@ -1,5 +1,5 @@
 <div class="view-box">
-	<h1 class="ui-title">标题h1</h1>
+	<h1 class="ui-title">标题h1&lt;&gt;</h1>
 	<h2 class="ui-title">标题h2</h2>
 	<h3 class="ui-title">标题h3</h3>
 	<div class="ui-quote">引用标题</div>
