--- a/views/components/tabs.html
+++ b/views/components/tabs.html
@@ -1,158 +1,185 @@
 <div class="view-box">
 	<div class="ui-quote">选项卡</div>
-	<div class="ui-tabs-box">
-		<div class="ui-tabs-title">
-			<ul>
-				<li class="active"><a href="javascript: void(0);">标题1</a></li>
-				<li><a href="javascript: void(0);">标题2</a></li>
-				<li><a href="javascript: void(0);">标题3</a></li>
-			</ul>
-		</div>
-		<div class="ui-tabs-body">
-			<div class="active">内容1</div>
-			<div>内容2</div>
-			<div>内容3</div>
+	<div class="ui-wd-6">
+		<div class="ui-tabs-box ui-nobd">
+			<div class="ui-tabs-title">
+				<ul>
+					<li class="active"><a href="javascript: void(0);">标题1</a></li>
+					<li><a href="javascript: void(0);">标题2</a></li>
+					<li><a href="javascript: void(0);">标题3</a></li>
+				</ul>
+			</div>
+			<div class="ui-tabs-body">
+				<div class="active">内容1</div>
+				<div>内容2</div>
+				<div>内容3</div>
+			</div>
 		</div>
 	</div>
-	<div class="ui-tabs-box ui-nobd ui-mg-row-20">
-		<div class="ui-tabs-title">
-			<ul>
-				<li class="active"><a href="javascript: void(0);">标题1</a></li>
-				<li><a href="javascript: void(0);">标题2</a></li>
-				<li><a href="javascript: void(0);">标题3</a></li>
-			</ul>
-		</div>
-		<div class="ui-tabs-body">
-			<div class="active">内容1</div>
-			<div>内容2</div>
-			<div>内容3</div>
+	<div class="ui-wd-6">
+		<div class="ui-tabs-box">
+			<div class="ui-tabs-title">
+				<ul>
+					<li class="active"><a href="javascript: void(0);">标题1</a></li>
+					<li><a href="javascript: void(0);">标题2</a></li>
+					<li><a href="javascript: void(0);">标题3</a></li>
+				</ul>
+			</div>
+			<div class="ui-tabs-body">
+				<div class="active">内容1</div>
+				<div>内容2</div>
+				<div>内容3</div>
+			</div>
 		</div>
 	</div>
-	<div style="background-color: #eee;" class="ui-pd-20">
-		<div class="ui-tabs-box ui-solid-default ui-border ui-mg-row-20">
-			<div class="ui-tabs-title">
-				<ul>
-					<li class="active"><a href="javascript: void(0);">标题1</a></li>
-					<li><a href="javascript: void(0);">标题2</a></li>
-					<li><a href="javascript: void(0);">标题3</a></li>
-				</ul>
-			</div>
-			<div class="ui-tabs-body">
-				<div class="active">内容1</div>
-				<div>内容2</div>
-				<div>内容3</div>
-			</div>
-		</div>
-		<div class="ui-tabs-box ui-solid-normal ui-mg-row-20">
-			<div class="ui-tabs-title">
-				<ul>
-					<li class="active"><a href="javascript: void(0);">标题1</a></li>
-					<li><a href="javascript: void(0);">标题2</a></li>
-					<li><a href="javascript: void(0);">标题3</a></li>
-				</ul>
-			</div>
-			<div class="ui-tabs-body">
-				<div class="active">内容1</div>
-				<div>内容2</div>
-				<div>内容3</div>
+	<div class="clear ui-mg-row-20"></div>
+	<div style="background-color: #eee;" class="clear">
+		<div class="ui-wd-6 ui-mg-row-20">
+			<div class="ui-tabs-box ui-solid-normal">
+				<div class="ui-tabs-title">
+					<ul>
+						<li class="active"><a href="javascript: void(0);">标题1</a></li>
+						<li><a href="javascript: void(0);">标题2</a></li>
+						<li><a href="javascript: void(0);">标题3</a></li>
+					</ul>
+				</div>
+				<div class="ui-tabs-body">
+					<div class="active">内容1</div>
+					<div>内容2</div>
+					<div>内容3</div>
+				</div>
 			</div>
 		</div>
-		<div class="ui-tabs-box ui-solid-primary ui-border ui-mg-row-20">
-			<div class="ui-tabs-title">
-				<ul>
-					<li class="active"><a href="javascript: void(0);">标题1</a></li>
-					<li><a href="javascript: void(0);">标题2</a></li>
-					<li><a href="javascript: void(0);">标题3</a></li>
-				</ul>
-			</div>
-			<div class="ui-tabs-body">
-				<div class="active">内容1</div>
-				<div>内容2</div>
-				<div>内容3</div>
-			</div>
-		</div>
-		<div class="ui-tabs-box ui-solid-success ui-mg-row-20">
-			<div class="ui-tabs-title">
-				<ul>
-					<li class="active"><a href="javascript: void(0);">标题1</a></li>
-					<li><a href="javascript: void(0);">标题2</a></li>
-					<li><a href="javascript: void(0);">标题3</a></li>
-				</ul>
-			</div>
-			<div class="ui-tabs-body">
-				<div class="active">内容1</div>
-				<div>内容2</div>
-				<div>内容3</div>
+		<div class="ui-wd-6 ui-mg-row-20">
+			<div class="ui-tabs-box ui-solid-success">
+				<div class="ui-tabs-title">
+					<ul>
+						<li class="active"><a href="javascript: void(0);">标题1</a></li>
+						<li><a href="javascript: void(0);">标题2</a></li>
+						<li><a href="javascript: void(0);">标题3</a></li>
+					</ul>
+				</div>
+				<div class="ui-tabs-body">
+					<div class="active">内容1</div>
+					<div>内容2</div>
+					<div>内容3</div>
+				</div>
 			</div>
 		</div>
-		<div class="ui-tabs-box ui-solid-info ui-border ui-mg-row-20">
-			<div class="ui-tabs-title">
-				<ul>
-					<li class="active"><a href="javascript: void(0);">标题1</a></li>
-					<li><a href="javascript: void(0);">标题2</a></li>
-					<li><a href="javascript: void(0);">标题3</a></li>
-				</ul>
-			</div>
-			<div class="ui-tabs-body">
-				<div class="active">内容1</div>
-				<div>内容2</div>
-				<div>内容3</div>
-			</div>
-		</div>
-		<div class="ui-tabs-box ui-solid-warning ui-mg-row-20">
-			<div class="ui-tabs-title">
-				<ul>
-					<li class="active"><a href="javascript: void(0);">标题1</a></li>
-					<li><a href="javascript: void(0);">标题2</a></li>
-					<li><a href="javascript: void(0);">标题3</a></li>
-				</ul>
-			</div>
-			<div class="ui-tabs-body">
-				<div class="active">内容1</div>
-				<div>内容2</div>
-				<div>内容3</div>
+		<div class="ui-wd-6 ui-mg-row-20">
+			<div class="ui-tabs-box ui-solid-warning">
+				<div class="ui-tabs-title">
+					<ul>
+						<li class="active"><a href="javascript: void(0);">标题1</a></li>
+						<li><a href="javascript: void(0);">标题2</a></li>
+						<li><a href="javascript: void(0);">标题3</a></li>
+					</ul>
+				</div>
+				<div class="ui-tabs-body">
+					<div class="active">内容1</div>
+					<div>内容2</div>
+					<div>内容3</div>
+				</div>
 			</div>
 		</div>
-		<div class="ui-tabs-box ui-solid-deepred ui-border ui-mg-row-20">
-			<div class="ui-tabs-title">
-				<ul>
-					<li class="active"><a href="javascript: void(0);">标题1</a></li>
-					<li><a href="javascript: void(0);">标题2</a></li>
-					<li><a href="javascript: void(0);">标题3</a></li>
-				</ul>
-			</div>
-			<div class="ui-tabs-body">
-				<div class="active">内容1</div>
-				<div>内容2</div>
-				<div>内容3</div>
-			</div>
-		</div>
-		<div class="ui-tabs-box ui-solid-black ui-mg-row-20">
-			<div class="ui-tabs-title">
-				<ul>
-					<li class="active"><a href="javascript: void(0);">标题1</a></li>
-					<li><a href="javascript: void(0);">标题2</a></li>
-					<li><a href="javascript: void(0);">标题3</a></li>
-				</ul>
-			</div>
-			<div class="ui-tabs-body">
-				<div class="active">内容1</div>
-				<div>内容2</div>
-				<div>内容3</div>
+		<div class="ui-wd-6 ui-mg-row-20">
+			<div class="ui-tabs-box ui-solid-black">
+				<div class="ui-tabs-title">
+					<ul>
+						<li class="active"><a href="javascript: void(0);">标题1</a></li>
+						<li><a href="javascript: void(0);">标题2</a></li>
+						<li><a href="javascript: void(0);">标题3</a></li>
+					</ul>
+				</div>
+				<div class="ui-tabs-body">
+					<div class="active">内容1</div>
+					<div>内容2</div>
+					<div>内容3</div>
+				</div>
 			</div>
 		</div>
-		<div class="ui-tabs-box ui-solid-maroon ui-border ui-mg-row-20">
-			<div class="ui-tabs-title">
-				<ul>
-					<li class="active"><a href="javascript: void(0);">标题1</a></li>
-					<li><a href="javascript: void(0);">标题2</a></li>
-					<li><a href="javascript: void(0);">标题3</a></li>
-				</ul>
+		<div class="ui-wd-6 ui-mg-row-20">
+			<div class="ui-tabs-box ui-solid-default ui-border">
+				<div class="ui-tabs-title">
+					<ul>
+						<li class="active"><a href="javascript: void(0);">标题1</a></li>
+						<li><a href="javascript: void(0);">标题2</a></li>
+						<li><a href="javascript: void(0);">标题3</a></li>
+					</ul>
+				</div>
+				<div class="ui-tabs-body">
+					<div class="active">内容1</div>
+					<div>内容2</div>
+					<div>内容3</div>
+				</div>
 			</div>
-			<div class="ui-tabs-body">
-				<div class="active">内容1</div>
-				<div>内容2</div>
-				<div>内容3</div>
+		</div>
+
+		<div class="ui-wd-6 ui-mg-row-20">
+			<div class="ui-tabs-box ui-solid-primary ui-border">
+				<div class="ui-tabs-title">
+					<ul>
+						<li class="active"><a href="javascript: void(0);">标题1</a></li>
+						<li><a href="javascript: void(0);">标题2</a></li>
+						<li><a href="javascript: void(0);">标题3</a></li>
+					</ul>
+				</div>
+				<div class="ui-tabs-body">
+					<div class="active">内容1</div>
+					<div>内容2</div>
+					<div>内容3</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="ui-wd-6 ui-mg-row-20">
+			<div class="ui-tabs-box ui-solid-info ui-border">
+				<div class="ui-tabs-title">
+					<ul>
+						<li class="active"><a href="javascript: void(0);">标题1</a></li>
+						<li><a href="javascript: void(0);">标题2</a></li>
+						<li><a href="javascript: void(0);">标题3</a></li>
+					</ul>
+				</div>
+				<div class="ui-tabs-body">
+					<div class="active">内容1</div>
+					<div>内容2</div>
+					<div>内容3</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="ui-wd-6 ui-mg-row-20">
+			<div class="ui-tabs-box ui-solid-deepred ui-border">
+				<div class="ui-tabs-title">
+					<ul>
+						<li class="active"><a href="javascript: void(0);">标题1</a></li>
+						<li><a href="javascript: void(0);">标题2</a></li>
+						<li><a href="javascript: void(0);">标题3</a></li>
+					</ul>
+				</div>
+				<div class="ui-tabs-body">
+					<div class="active">内容1</div>
+					<div>内容2</div>
+					<div>内容3</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="ui-wd-6 ui-mg-row-20">
+			<div class="ui-tabs-box ui-solid-maroon ui-border">
+				<div class="ui-tabs-title">
+					<ul>
+						<li class="active"><a href="javascript: void(0);">标题1</a></li>
+						<li><a href="javascript: void(0);">标题2</a></li>
+						<li><a href="javascript: void(0);">标题3</a></li>
+					</ul>
+				</div>
+				<div class="ui-tabs-body">
+					<div class="active">内容1</div>
+					<div>内容2</div>
+					<div>内容3</div>
+				</div>
 			</div>
 		</div>
 	</div>
