--- a/views/components/title.html
+++ b/views/components/title.html
@@ -1,12 +1,12 @@
 <div class="view-box">
-	<h1 class="ui-title">标题h1&lt;&gt;</h1>
-	<h2 class="ui-title">标题h2</h2>
-	<h3 class="ui-title">标题h3</h3>
-	<div class="ui-quote">引用标题</div>
-	<div class="ui-quote ui-prompt">引用标题</div>
-	<div class="ui-quote ui-large">引用标题</div>
-	<div class="ui-tle-h2">小标题</div>
-	<div class="ui-tip">请仔细查看按钮样式规律，以便提高开发效率！双击代码可直接复制</div>
+	<h1 class="ui-title">&lt;h1 class="ui-title"&gt;标题h1&lt;h1&gt;</h1>
+	<h2 class="ui-title">&lt;h2 class="ui-title"&gt;标题h2&lt;h2&gt;</h2>
+	<h3 class="ui-title">&lt;h3 class="ui-title"&gt;标题h3&lt;h3&gt;</h3>
+	<div class="ui-quote">&lt;div class="ui-quote"&gt;引用标题&lt;div&gt;</div>
+	<div class="ui-quote ui-prompt">&lt;div class="ui-quote ui-prompt"&gt;引用标题&lt;div&gt;</div>
+	<div class="ui-quote ui-large">&lt;div class="ui-quote ui-large"&gt;引用标题&lt;div&gt;</div>
+	<div class="ui-tle-h2">&lt;div class="ui-tle-h2"&gt;小标题&lt;div&gt;</div>
+	<div class="ui-tip">&lt;div class="ui-tip"&gt;提示&lt;div&gt;</div>
 	<div class="panels-box clear" style="background: #eaedf1;padding: 15px 0">
 		<div class="ui-panels-default ui-wd-6">
 			<div class="ui-panel-head">panel default head</div>
