--- a/views/demo/details.html
+++ b/views/demo/details.html
@@ -1,3 +1,37 @@
 <div class="view-box">
-	<div class="ui-quote">详情页</div>
+    <div class="ui-quote">新增课程</div>
+    <div class="ui-form">
+        <form novalidate id="detailsForm" name="detailsForm">
+            <div class="ui-items">
+                <label for="" class="ui-wd-2 ui-label" align="right">*名称</label>
+                <div class="ui-wd-3">
+                    <input type="text" class="ui-input" placeholder="请输入课程名称" name="name" ng-model="details.name" required />
+                </div>
+                <div class="ui-wd-4 ui-form-tip" ng-show="detailsForm.name.$error.required">请输入名称</div>
+            </div>
+            <div class="ui-items">
+                <label for="" class="ui-wd-2 ui-label" align="right">*选择图片</label>
+                <div class="ui-wd-3" style="line-height: 35px;">
+                    <label for="upfile" class="ui-btn-raw ui-small" style=" line-height: 20px">选择</label>
+                    <input type="file" id="upfile" style="display: none;" />
+                </div>
+            </div>
+            <div class="ui-items">
+                <label for="" class="ui-wd-2 ui-label" align="right">*状态</label>
+                <div class="ui-wd-3">
+                	<div class="ui-relative">
+                    <select name="isEnable" class="ui-select" ng-model="details.isEnable" ng-init="details.isEnable = 1">
+                        <option ng-value="1">启用</option>
+                        <option ng-value="0">禁用</option>
+                    </select>
+										<i class="ui-icon">&#xe65c;</i>
+									</div>
+                </div>
+            </div>
+        </form>
+    </div>
+    <div class="ui-pd-20" align="center">
+        <a href="javascript: ;" class="ui-btn-raw" ui-sref="home.demo.list">返回</a>
+        <a href="javascript: ;" class="ui-btn-normal" ng-disabled="detailsForm.$invalid" ng-click="upfile()">保存</a>
+    </div>
 </div>
